Update suma datos

--- a/Tarea 1/css/Tarea_1.css
+++ b/Tarea 1/css/Tarea_1.css
@@ -1,7 +1,7 @@
 h1 
 {
-    color: rgb(197, 89, 34);
-    background-color: rgb(225, 155, 155);
+    color: rgb(184, 221, 223);
+    background-color: rgb(110, 213, 218);
 }
 
 .estiloTituloPrincipal
@@ -15,8 +15,16 @@ h1
 }
 .contornoImagen 
 {
-    opacity: 0.8;
+    opacity: 0.5;
     /*transparencia de la imagen del 0 al 1*/
     width: 100%;
     height: 100%;
+}
+
+.contenedorImagenPalabras 
+{
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    background-color: azure;
 }
