--- a/Tarea3/css/password.css
+++ b/Tarea3/css/password.css
@@ -7,13 +7,20 @@
 }
 
 .weak {
+    color: #ffff;
     background-color: red;
+    border-color: #000000;
 }
 
 .medium {
+    color: #ffff;
     background-color: orange;
+    border-color: #000000;
 }
 
 .strong {
+    color: #ffff;
     background-color: green;
+    border-color: #000000;
 }
+
