--- a/Tarea4_Proyecto_1_CV/css/Jorddy_CV.css
+++ b/Tarea4_Proyecto_1_CV/css/Jorddy_CV.css
@@ -1,9 +1,13 @@
 .elemento {
-    width: 400px;
-    height: 100%;
-    background-color: #3498db;
-    color: white;
-    margin: 10px;
-    justify-content: center;
-    align-items: center;
+    background-color: #e4e4e4;
+    color: rgb(0, 0, 0);
+}
+.elemento2 {
+        background-color: #e4e4e418;
+        color: rgb(0, 0, 0);
+    }
+
+.contenedor {
+    display: flex;
+    flex-wrap: nowrap
 }
