--- a/Tarea4_Proyecto_1_CV/css/Jorddy_CV.css
+++ b/Tarea4_Proyecto_1_CV/css/Jorddy_CV.css
@@ -7,7 +7,11 @@
         color: rgb(0, 0, 0);
     }
 
-.contenedor {
-    display: flex;
-    flex-wrap: nowrap
+.titulo {
+    height: 100%;
+    width: 100%;
+    background-color: #3498db;
+    color: white;
+    margin: 10px;
+    text-align:center;
 }
