--- a/Tarea4_Proyecto_1_CV/css/Jorddy_CV.css
+++ b/Tarea4_Proyecto_1_CV/css/Jorddy_CV.css
@@ -10,7 +10,7 @@
 .titulo {
     height: 100%;
     width: 100%;
-    background-color: #3498db;
+    background-color: #3498db7e;
     color: white;
     margin: 10px;
     text-align:center;
