--- a/Tarea4_Proyecto_1_CV/css/Jorddy_CV.css
+++ b/Tarea4_Proyecto_1_CV/css/Jorddy_CV.css
@@ -11,6 +11,7 @@
     background-color: #3498db7e;
     color: white;
     text-align:center;
+    padding: 10px;
 }
 
 table {
@@ -41,6 +42,11 @@ table {
 }
 
 .tituloUCR {
-    height: 10%;
-    width: 10%;
+    height: 110%;
+    width: 110%;
+}
+
+.tituloTEC {
+    height: 100%;
+    width: 100%;
 }
