--- a/Proyectos_Angular/aprendiendo-angular-2/src/app/saludando-mundo/saludando-mundo.component.html
+++ b/Proyectos_Angular/aprendiendo-angular-2/src/app/saludando-mundo/saludando-mundo.component.html
@@ -1,1 +1,4 @@
-<p>saludando-mundo works! New component</p>
+<p>saludando-mundo works!</p>
+<h1>Estoy en una etiqueta de angular</h1>
+<h2>tamaño h2</h2>
+<h3>tamaño h3</h3>
