registro componente informacion personal

--- a/Proyectos_Angular/primeros-pasos-angular/src/app/app.component.html
+++ b/Proyectos_Angular/primeros-pasos-angular/src/app/app.component.html
@@ -1,6 +1,12 @@
 <main class="main">
   <div class="content">
-    <app-primer-formulario-jorddy></app-primer-formulario-jorddy>
+    <app-primer-formulario-jorddy
+    nombrePersona="Johel"></app-primer-formulario-jorddy>
+
+    <app-informacion-personal
+    nombrePersona="Jorddy"
+    apellidoPersona="Castro"
+    edadPersona="32"></app-informacion-personal>
   </div>
 </main>
 
