--- a/Proyectos_Angular/primeros-pasos-angular/src/app/primer-formulario/primer-formulario.component.html
+++ b/Proyectos_Angular/primeros-pasos-angular/src/app/primer-formulario/primer-formulario.component.html
@@ -1,6 +1,6 @@
-<p>primer-formulario works!</p>
+<p>acá inicia el componente de PRIMER FORMULARIO</p>
 
 <div class="container">
-    <h3>Digite el nombre</h3>
-    <input class="form-control">
+    <h3>Digite el nombre: {{nombrePersona}}</h3>
 </div>
+<p>acá termina el componente de PRIMER FORMULARIO</p>
