--- a/Proyectos_Angular/primeros-pasos-angular/src/app/app.component.html
+++ b/Proyectos_Angular/primeros-pasos-angular/src/app/app.component.html
@@ -3,10 +3,19 @@
     <app-primer-formulario-jorddy
     nombrePersona="Johel"></app-primer-formulario-jorddy>
 
-    <app-informacion-personal
-    nombrePersona="Jorddy"
-    apellidoPersona="Castro"
-    edadPersona="32"></app-informacion-personal>
+    <div class="container" style="background-color: brown;">
+      <h1>APRENDIENDO PROPS</h1>
+      <app-informacion-personal
+      nombrePersona="Jorddy"
+      apellidoPersona="Castro"
+      edadPersona="32"></app-informacion-personal>
+
+      <app-informacion-personal
+      nombrePersona="Betsy"
+      apellidoPersona="Hidalgo"
+      edadPersona="26"></app-informacion-personal>
+    </div>
+
   </div>
 </main>
 
