angular implementacion del ngModal

--- a/Proyectos_Angular/primeros-pasos-angular/src/app/app.component.html
+++ b/Proyectos_Angular/primeros-pasos-angular/src/app/app.component.html
@@ -1,10 +1,9 @@
 <main class="main">
   <div class="content">
-    <app-primer-formulario-jorddy
-    nombrePersona="Johel"></app-primer-formulario-jorddy>
-
     <div class="container" style="background-color: brown;">
+
       <h1>APRENDIENDO PROPS</h1>
+
       <app-informacion-personal
       nombrePersona="Jorddy"
       apellidoPersona="Castro"
@@ -16,6 +15,8 @@
       edadPersona="26"></app-informacion-personal>
     </div>
 
+    <app-primer-formulario-jorddy></app-primer-formulario-jorddy>
+    
   </div>
 </main>
 
