--- a/Proyectos_Angular/primeros-pasos-angular/src/app/primer-formulario/primer-formulario.component.html
+++ b/Proyectos_Angular/primeros-pasos-angular/src/app/primer-formulario/primer-formulario.component.html
@@ -2,7 +2,7 @@
     <h1>Mi primer formulario</h1>
     <input type="text" [(ngModel)] = "nombrePersona" class="form-control" placeholder="Digite el nombre">
     <div class="d-flex justify-content-end">
-        <span style="color: red;">Campo del nombre de la persona requerido</span>
+        <span *ngif="mostrarMensajeError" style="color: red;">Campo del nombre de la persona requerido</span>
     </div>
     <input type="text" [(ngModel)] = "apellidoPersona" class="form-control" placeholder="Digite el apellido">
     <div class="d-flex justify-content-end">
