--- a/Proyectos_Angular/primeros-pasos-angular/src/app/primer-formulario/primer-formulario.component.html
+++ b/Proyectos_Angular/primeros-pasos-angular/src/app/primer-formulario/primer-formulario.component.html
@@ -10,7 +10,7 @@
     </div>
     <input type="text" [(ngModel)] = "edadPersona" class="form-control" placeholder="Digite la edad">
     <div class="d-flex justify-content-end">
-        <span *ngIf="mostrarMensajeErrorEdad" style="color: red;">Campo de la edad de la persona requerido</span>
+        <span *ngIf="mostrarMensajeErrorEdad"  style="color: red;">{{mensajeErrorEdad}}</span>
     </div>
     <button class="btn btn-primary" (click)="ValidarCampos()">Validad campos</button>
 </div>
