ngFor utilizando componente paises

--- a/Proyectos_Angular/primeros-pasos-angular/src/app/app.component.html
+++ b/Proyectos_Angular/primeros-pasos-angular/src/app/app.component.html
@@ -16,6 +16,8 @@
     </div>
 
     <app-primer-formulario-jorddy></app-primer-formulario-jorddy>
+    <app-listado-paises></app-listado-paises>
+    
     
   </div>
 </main>
