--- a/Proyectos_Angular/experimentando-angular/src/app/consumo-api/consumo-api.component.html
+++ b/Proyectos_Angular/experimentando-angular/src/app/consumo-api/consumo-api.component.html
@@ -1,1 +1,17 @@
 <p>consumo-api works!</p>
+
+<div class="container">
+    <h1>Estos son los paises registrados en nuestra base de datos</h1>
+    <table class="table">
+        <thead>
+                <th>Cod. País</th>
+                <th>Nombre de País</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>506</td>
+                <td>Costa Rica</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
