creacion de boton eliminar y modificar

--- a/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/formulario-uno/formulario-uno.component.html
+++ b/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/formulario-uno/formulario-uno.component.html
@@ -37,6 +37,10 @@
                 <td>{{per.correo}}</td>
                 <td>{{per.userName}}</td>
                 <td>{{per.passWord}}</td>
+                <td>
+                    <button class="btn btn-danger">E</button>
+                    <button class="btn btn-warning">M</button>
+                </td>
             </tr>
         </tbody>
     </table>
