modificacion API paises

--- a/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/consumo-api/consumo-api.component.html
+++ b/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/consumo-api/consumo-api.component.html
@@ -4,11 +4,15 @@
         <thead>
             <th>Cod. Pais</th>
             <th>Nombre de Pais</th>
+            <th>Capital</th>
+            <th>Moneda</th>
         </thead>
         <tbody>
             <tr *ngFor="let pais of vectorPaises">
                 <td>{{pais.idPais}}</td>
                 <td>{{pais.nombrePais}}</td>
+                <td>{{pais.capital}}</td>
+                <td>{{pais.moneda}}</td>
             </tr>
         </tbody>
 
