--- a/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/general/general.component.html
+++ b/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/general/general.component.html
@@ -1,27 +1,33 @@
-<p>USO DE CAROUSEL</p>
-
 <ngb-carousel>
     <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-            <img [src]="images[0]" alt="Random first slide" />
+            <img src="../../assets/img/Imagen1.jpg" alt="Random second slide" />
         </div>
         <div class="carousel-caption">
             <h3>First slide label</h3>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button class="btn btn-primary">Ingresar</button>
         </div>
     </ng-template>
     <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-            <img [src]="images[1]" alt="Random second slide" />
+            <img src="../../assets/img/Imagen2.jpg" alt="Random third slide" />
         </div>
         <div class="carousel-caption">
-            <h3>Second slide label</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h3>Third slide label</h3>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
-    </ng-template>
-    <ng-template ngbSlide>
+    </ng-template><ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-            <img [src]="images[2]" alt="Random third slide" />
+            <img src="../../assets/img/Imagen3.jpg" alt="Random third slide" />
+        </div>
+        <div class="carousel-caption">
+            <h3>Third slide label</h3>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        </div>
+    </ng-template><ng-template ngbSlide>
+        <div class="picsum-img-wrapper">
+            <img src="../../assets/img/Imagen4.jpg" alt="Random third slide" />
         </div>
         <div class="carousel-caption">
             <h3>Third slide label</h3>
