--- a/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/consumo-api/consumo-api.component.html
+++ b/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/consumo-api/consumo-api.component.html
@@ -1,6 +1,9 @@
-<div class="container">
-    <h1 class="form-control">GUÍA TURÍSTICA</h1>
-    <table class="table">
+<div class="container" style="background-color: rgb(133, 255, 237); padding: 50px;">
+    
+    <h6 style="text-align: end;">BUSCAR <input type="text" placeholder="Palabra clave"></h6>
+
+    <h1 class="form-control" style="text-align: center; background-color: yellow;">GUÍA TURÍSTICA</h1>
+    <table class="table" >
         <thead>
             <th>Cod. Pais</th>
             <th>Nombre de Pais</th>
@@ -18,4 +21,10 @@
             </tr>
         </tbody>
     </table>
+    <div class="form-control" style="text-align: end; background-color: rgb(255, 250, 225);">
+        <h6>Jorddy Castro Araya</h6>
+        <h6>Guía Turístico</h6>
+        <h6>+506 8790 0040</h6>
+        <h6>jorddy.castro_gmail.com</h6>
+    </div>
 </div>
