pendiente por editar persona

--- a/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/app.component.html
+++ b/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/app.component.html
@@ -1,20 +1,19 @@
 <div>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">VLA</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a routerLink="/General" class="nav-link" href="#">General</a>
+            <a routerLink="/General" class="nav-link" href="#"><button class="btn btn-info">General</button></a>
           </li>
           <li class="nav-item">
-            <a routerLink="/Directivas" class="nav-link" href="#">Directivas</a>
+            <a routerLink="/Directivas" class="nav-link" href="#"><button class="btn btn-info">Directivas</button></a>
           </li>
           <li class="nav-item">
-            <a routerLink="/ConsumoApi" class="nav-link" href="#">Consumo API</a>
+            <a routerLink="/ConsumoApi" class="nav-link" href="#"><button class="btn btn-info">Guia Turistica</button></a>
           </li>
           <li class="nav-item">
-            <a routerLink="/FormularioUno" class="nav-link" href="#">Formulario 1</a>
+            <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu espacio!</button></a>
           </li>
         </ul>
       </div>
