--- a/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/formulario-uno/formulario-uno.component.html
+++ b/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/formulario-uno/formulario-uno.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <h1>Mantenimiento de usuarios</h1>
-    <input [attr.disabled]="habilitarBotonEditar ? true: null" type="text" class="form-control" [(ngModel)]="nombrePersona" placeholder="Nombre de la persona" >
+    <h1>Formulario de reservación</h1>
+    <input [attr.disabled]="habilitarBotonEditar ? true: null" type="text" class="form-control" [(ngModel)]="userNamePersona" placeholder="Usuario">
     <div class="d-flex justify-content-end">
-        <span *ngIf="mostrarMensajeError" style="color: red;">{{mensajeNombrePersona}}</span>
+        <span *ngIf="mostrarMensajeError" style="color: red;">{{mensajeUserNamePersona}}</span>
     </div>
     <br>
     <input type="text" class="form-control" [(ngModel)]="correoPersona" placeholder="Correo de la persona">
@@ -10,38 +10,27 @@
         <span *ngIf="mostrarMensajeError" style="color: red;">{{mensajeCorreoPersona}}</span>
     </div>
     <br>
-    <input type="text" class="form-control" [(ngModel)]="userNamePersona" placeholder="User Name">
-    <div class="d-flex justify-content-end">
-        <span *ngIf="mostrarMensajeError" style="color: red;">{{mensajeUserNamePersona}}</span>
-    </div>
-    <br>
-    <input type="password" class="form-control" [(ngModel)]="passWordPersona" placeholder="Password">
-    <div class="d-flex justify-content-end">
-        <span *ngIf="mostrarMensajeError" style="color: red;">{{mensajePasswordPersona}}</span>
-    </div>
-    <br>
-    <button *ngIf="!habilitarBotonEditar" (click)="AbrirModal(ContenedorGuardarPersona)" class="btn btn-success">Guardar</button>
-    <button *ngIf="habilitarBotonEditar" (click)="AbrirModal(ContenedorGuardarPersona)" class="btn btn-warning">Editar</button>
+
+    <button *ngIf="!habilitarBotonEditar" (click)="AbrirModal(ContenedorGuardarPersona)" class="btn btn-success"style="margin: 10px;">Guardar</button>
+    <button *ngIf="habilitarBotonEditar" (click)="AbrirModal(ContenedorGuardarPersona)" class="btn btn-warning" style="margin: 10px;">Editar</button>
     <button (click)="ReestablecerConfiguracion()" class="btn btn-primary">Refrescar</button>
     <table class="table">
         <thead>
             <tr>
-                <th>Nombre</th>
+                <th>Estado</th>
+                <th>Usuario</th>
                 <th>Correo</th>
-                <th>User Name</th>
-                <th>Password</th>
             </tr>
         </thead>
         <tbody>
             <!--Mapeo del vector que leemos en el ts-->
             <tr *ngFor="let per of personas; let i = index">
-                <td>{{per.nombre}}</td>
-                <td>{{per.correo}}</td>
+                <td>Pendiente de Revisión</td>
                 <td>{{per.userName}}</td>
-                <td>{{per.passWord}}</td>
+                <td>{{per.correo}}</td>
                 <td>
-                    <button (click)="EliminarPersona(i)" class="btn btn-danger">E</button>
-                    <button (click)="BotonEditarPersona(i)" class="btn btn-warning">M</button>
+                    <button (click)="EliminarPersona(i)" class="btn btn-danger" style="margin: 10px;">Eliminar</button>
+                    <button (click)="BotonEditarPersona(i)" class="btn btn-warning" style="margin: 10px;">Modificar</button>
                 </td>
             </tr>
         </tbody>
@@ -50,12 +39,11 @@
 
     <ng-template #ContenedorGuardarPersona let-modal>
         <div class="modal-header">
-            <h4 class="modal-title">Registrar Persona</h4>            
+            <h4 class="modal-title">Registrar Reservación</h4>            
         </div>
         <div class="modal-body">
-            <p>Nombre: {{nombrePersona}}</p>
+            <p>Usuario: {{userNamePersona}}</p>
             <p>Correo: {{correoPersona}}</p>
-            <p>UserName: {{userNamePersona}}</p>
         </div>
         <div class="modal-footer">
             <button class="btn btn-danger" (click)="modal.dismiss()">Cancelar</button>
@@ -71,7 +59,7 @@
             <h4 class="modal-title">Respuesta del Servicio</h4>            
         </div>
         <div class="modal-body">
-            <p>{{codigoRespuestaApi}}</p>
+
             <p>{{descripcionRespuestaApi}}</p>
         </div>
         <div class="modal-footer">
