Carousel implementado con imagenes y API paises

--- a/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/general/general.component.scss
+++ b/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/general/general.component.scss
@@ -1,6 +1,7 @@
 img{
     width: 100%;
-    height: 800px;
+    height: 100%;
     overflow: hidden; //controla el contenido que se muestra cuando es muy grande
-    position: relative;
+    position:relative;
+
 }
