--- a/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/general/general.component.html
+++ b/Proyectos_Angular/experientando-angular_clase_42/experientando-angular/src/app/general/general.component.html
@@ -1,37 +1,125 @@
-<ngb-carousel>
+<div style="text-align: center;">
+    <h4>
+        Acompañanos a visitar tu destino favorito!
+    </h4>
+    <ngb-carousel>
     <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-            <img src="../../assets/img/Imagen1.jpg" alt="Random second slide" />
+            <img src="../../assets/img/Costa Roca.jpg" alt="Random second slide" />
         </div>
-        <div class="carousel-caption">
-            <h3>First slide label</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <button class="btn btn-primary">Ingresar</button>
-        </div>
-    </ng-template>
-    <ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
-            <img src="../../assets/img/Imagen2.jpg" alt="Random third slide" />
-        </div>
-        <div class="carousel-caption">
-            <h3>Third slide label</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-        </div>
-    </ng-template><ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
-            <img src="../../assets/img/Imagen3.jpg" alt="Random third slide" />
-        </div>
-        <div class="carousel-caption">
-            <h3>Third slide label</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-        </div>
-    </ng-template><ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
-            <img src="../../assets/img/Imagen4.jpg" alt="Random third slide" />
-        </div>
-        <div class="carousel-caption">
-            <h3>Third slide label</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <div class="carousel-caption"style="background-color: rgba(0, 0, 0, 0.597);">
+            <h3>{{vectorPaises[0].nombrePais}}</h3>
+            <p> {{"| "+vectorPaises[0].lugaresTuristicos[0]+" |"}}
+                {{"| "+vectorPaises[0].lugaresTuristicos[1]+" |"}}
+                {{"| "+vectorPaises[0].lugaresTuristicos[2]+" |"}}
+            </p>
+            <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu espacio!</button></a>
         </div>
     </ng-template>
-</ngb-carousel>
+        <ng-template ngbSlide>
+        <div class="picsum-img-wrapper" >
+            <img src="../../assets/img/panama.jpg" alt="Random second slide" />
+        </div>
+        <div class="carousel-caption"style="background-color: rgba(0, 0, 0, 0.597);">
+            <h3>{{vectorPaises[1].nombrePais}}</h3>
+            <p> {{"| "+vectorPaises[1].lugaresTuristicos[0]+" |"}}
+                {{"| "+vectorPaises[1].lugaresTuristicos[1]+" |"}}
+                {{"| "+vectorPaises[1].lugaresTuristicos[2]+" |"}}
+            </p>
+            <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu espacio!</button></a>
+        </div>
+    </ng-template>
+        <ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+                <img src="../../assets/img/Colombia.jpg" alt="Random second slide" />
+            </div>
+            <div class="carousel-caption"style="background-color: rgba(0, 0, 0, 0.597);">
+                <h3>{{vectorPaises[2].nombrePais}}</h3>
+                <p> {{"| "+vectorPaises[2].lugaresTuristicos[0]+" |"}}
+                    {{"| "+vectorPaises[2].lugaresTuristicos[1]+" |"}}
+                    {{"| "+vectorPaises[2].lugaresTuristicos[2]+" |"}}
+                </p>
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                        espacio!</button></a>
+            </div>
+        </ng-template><ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+                <img src="../../assets/img/ElSalvador.jpg" alt="Random second slide" />
+            </div>
+            <div class="carousel-caption"style="background-color: rgba(0, 0, 0, 0.597);">
+                <h3>{{vectorPaises[3].nombrePais}}</h3>
+                <p> {{"| "+vectorPaises[3].lugaresTuristicos[0]+" |"}}
+                    {{"| "+vectorPaises[3].lugaresTuristicos[1]+" |"}}
+                    {{"| "+vectorPaises[3].lugaresTuristicos[2]+" |"}}
+                </p>
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                        espacio!</button></a>
+            </div>
+        </ng-template><ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+                <img src="../../assets/img/Argentina.jpg" alt="Random second slide" />
+            </div>
+            <div class="carousel-caption"style="background-color: rgba(0, 0, 0, 0.597);">
+                <h3>{{vectorPaises[4].nombrePais}}</h3>
+                <p> {{"| "+vectorPaises[4].lugaresTuristicos[0]+" |"}}
+                    {{"| "+vectorPaises[4].lugaresTuristicos[1]+" |"}}
+                    {{"| "+vectorPaises[4].lugaresTuristicos[2]+" |"}}
+                </p>
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                        espacio!</button></a>
+            </div>
+        </ng-template><ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+                <img src="../../assets/img/Mexico.jpg" alt="Random second slide" />
+            </div>
+            <div class="carousel-caption" style="background-color: rgba(0, 0, 0, 0.597);">
+                <h3>{{vectorPaises[5].nombrePais}}</h3>
+                <p> {{"| "+vectorPaises[5].lugaresTuristicos[0]+" |"}}
+                    {{"| "+vectorPaises[5].lugaresTuristicos[1]+" |"}}
+                    {{"| "+vectorPaises[5].lugaresTuristicos[2]+" |"}}
+                </p>
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                        espacio!</button></a>
+            </div>
+        </ng-template><ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+                <img src="../../assets/img/Brasil.jpg" alt="Random second slide" />
+            </div>
+            <div class="carousel-caption"style="background-color: rgba(0, 0, 0, 0.597);">
+                <h3>{{vectorPaises[6].nombrePais}}</h3>
+                <p> {{"| "+vectorPaises[6].lugaresTuristicos[0]+" |"}}
+                    {{"| "+vectorPaises[6].lugaresTuristicos[1]+" |"}}
+                    {{"| "+vectorPaises[6].lugaresTuristicos[2]+" |"}}
+                </p>
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                        espacio!</button></a>
+            </div>
+        </ng-template><ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+                <img src="../../assets/img/Chile.jpg" alt="Random second slide" />
+            </div>
+            <div class="carousel-caption" style="background-color: rgba(0, 0, 0, 0.597);">
+                <h3>{{vectorPaises[7].nombrePais}}</h3>
+                <p> {{"| "+vectorPaises[7].lugaresTuristicos[0]+" |"}}
+                    {{"| "+vectorPaises[7].lugaresTuristicos[1]+" |"}}
+                    {{"| "+vectorPaises[7].lugaresTuristicos[2]+" |"}}
+                </p>
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                        espacio!</button></a>
+            </div>
+        </ng-template><ng-template ngbSlide>
+            <div class="picsum-img-wrapper">
+                <img src="../../assets/img/Peru.jpg" alt="Random second slide" />
+            </div>
+            <div class="carousel-caption" style="background-color: rgba(0, 0, 0, 0.597);">
+                <h3>{{vectorPaises[8].nombrePais}}</h3>
+                <p> {{"| "+vectorPaises[8].lugaresTuristicos[0]+" |"}}
+                    {{"| "+vectorPaises[8].lugaresTuristicos[1]+" |"}}
+                    {{"| "+vectorPaises[8].lugaresTuristicos[2]+" |"}}
+                </p>
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                        espacio!</button></a>
+            </div>
+        </ng-template>
+    </ngb-carousel>
+</div>
