proyecto_angular_terminado

--- a/Proyectos_Angular/experientando-angular_clase_42/proyecto-angular-jorddy/src/app/general/general.component.html
+++ b/Proyectos_Angular/experientando-angular_clase_42/proyecto-angular-jorddy/src/app/general/general.component.html
@@ -13,7 +13,14 @@
                 {{"| "+vectorPaises[0].lugaresTuristicos[1]+" |"}}
                 {{"| "+vectorPaises[0].lugaresTuristicos[2]+" |"}}
             </p>
-            <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu espacio!</button></a>
+            <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-warning">Reserva tu espacio!</button></a>
+            <br><br>
+            <div style="background-color: rgba(245, 245, 220, 0.361); text-align: justify; padding: 30px; margin: 30px;">
+                <p> Noticias recientes de este país:</p>
+            <p> {{"1) "+vectorPaises[0].noticiasRelevantes[0]}}</p>
+            <p> {{"2) "+vectorPaises[0].noticiasRelevantes[1]}}</p>
+            <p> {{"3) "+vectorPaises[0].noticiasRelevantes[2]}}</p>
+            </div>
         </div>
     </ng-template>
         <ng-template ngbSlide>
@@ -26,7 +33,14 @@
                 {{"| "+vectorPaises[1].lugaresTuristicos[1]+" |"}}
                 {{"| "+vectorPaises[1].lugaresTuristicos[2]+" |"}}
             </p>
-            <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu espacio!</button></a>
+            <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-warning">Reserva tu espacio!</button></a>
+            <br><br>
+            <div style="background-color: rgba(245, 245, 220, 0.361); text-align: justify; padding: 30px; margin: 30px;">
+                <p> Noticias recientes de este país:</p>
+                <p> {{"1) "+vectorPaises[1].noticiasRelevantes[0]}}</p>
+                <p> {{"2) "+vectorPaises[1].noticiasRelevantes[1]}}</p>
+                <p> {{"3) "+vectorPaises[1].noticiasRelevantes[2]}}</p>
+            </div>
         </div>
     </ng-template>
         <ng-template ngbSlide>
@@ -39,8 +53,15 @@
                     {{"| "+vectorPaises[2].lugaresTuristicos[1]+" |"}}
                     {{"| "+vectorPaises[2].lugaresTuristicos[2]+" |"}}
                 </p>
-                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-warning">Reserva tu
                         espacio!</button></a>
+                <br><br>
+                <div style="background-color: rgba(245, 245, 220, 0.361); text-align: justify; padding: 30px; margin: 30px;">
+                    <p> Noticias recientes de este país:</p>
+                    <p> {{"1) "+vectorPaises[2].noticiasRelevantes[0]}}</p>
+                    <p> {{"2) "+vectorPaises[2].noticiasRelevantes[1]}}</p>
+                    <p> {{"3) "+vectorPaises[2].noticiasRelevantes[2]}}</p>
+                </div>
             </div>
         </ng-template><ng-template ngbSlide>
             <div class="picsum-img-wrapper">
@@ -52,8 +73,15 @@
                     {{"| "+vectorPaises[3].lugaresTuristicos[1]+" |"}}
                     {{"| "+vectorPaises[3].lugaresTuristicos[2]+" |"}}
                 </p>
-                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-warning">Reserva tu
                         espacio!</button></a>
+                <br><br>
+                <div style="background-color: rgba(245, 245, 220, 0.361); text-align: justify; padding: 30px; margin: 30px;">
+                    <p> Noticias recientes de este país:</p>
+                    <p> {{"1) "+vectorPaises[3].noticiasRelevantes[0]}}</p>
+                    <p> {{"2) "+vectorPaises[3].noticiasRelevantes[1]}}</p>
+                    <p> {{"3) "+vectorPaises[3].noticiasRelevantes[2]}}</p>
+                </div>
             </div>
         </ng-template><ng-template ngbSlide>
             <div class="picsum-img-wrapper">
@@ -65,8 +93,15 @@
                     {{"| "+vectorPaises[4].lugaresTuristicos[1]+" |"}}
                     {{"| "+vectorPaises[4].lugaresTuristicos[2]+" |"}}
                 </p>
-                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-warning">Reserva tu
                         espacio!</button></a>
+                <br><br>
+                <div style="background-color: rgba(245, 245, 220, 0.361); text-align: justify; padding: 30px; margin: 30px;">
+                    <p> Noticias recientes de este país:</p>
+                    <p> {{"1) "+vectorPaises[4].noticiasRelevantes[0]}}</p>
+                    <p> {{"2) "+vectorPaises[4].noticiasRelevantes[1]}}</p>
+                    <p> {{"3) "+vectorPaises[4].noticiasRelevantes[2]}}</p>
+                </div>
             </div>
         </ng-template><ng-template ngbSlide>
             <div class="picsum-img-wrapper">
@@ -78,8 +113,15 @@
                     {{"| "+vectorPaises[5].lugaresTuristicos[1]+" |"}}
                     {{"| "+vectorPaises[5].lugaresTuristicos[2]+" |"}}
                 </p>
-                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-warning">Reserva tu
                         espacio!</button></a>
+                <br><br>
+                <div style="background-color: rgba(245, 245, 220, 0.361); text-align: justify; padding: 30px; margin: 30px;">
+                    <p> Noticias recientes de este país:</p>
+                    <p> {{"1) "+vectorPaises[5].noticiasRelevantes[0]}}</p>
+                    <p> {{"2) "+vectorPaises[5].noticiasRelevantes[1]}}</p>
+                    <p> {{"3) "+vectorPaises[5].noticiasRelevantes[2]}}</p>
+                </div>
             </div>
         </ng-template><ng-template ngbSlide>
             <div class="picsum-img-wrapper">
@@ -91,8 +133,15 @@
                     {{"| "+vectorPaises[6].lugaresTuristicos[1]+" |"}}
                     {{"| "+vectorPaises[6].lugaresTuristicos[2]+" |"}}
                 </p>
-                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-warning">Reserva tu
                         espacio!</button></a>
+                 <br><br>
+                <div style="background-color: rgba(245, 245, 220, 0.361); text-align: justify; padding: 30px; margin: 30px;">
+                    <p> Noticias recientes de este país:</p>
+                    <p> {{"1) "+vectorPaises[6].noticiasRelevantes[0]}}</p>
+                    <p> {{"2) "+vectorPaises[6].noticiasRelevantes[1]}}</p>
+                    <p> {{"3) "+vectorPaises[6].noticiasRelevantes[2]}}</p>
+                </div>
             </div>
         </ng-template><ng-template ngbSlide>
             <div class="picsum-img-wrapper">
@@ -104,8 +153,15 @@
                     {{"| "+vectorPaises[7].lugaresTuristicos[1]+" |"}}
                     {{"| "+vectorPaises[7].lugaresTuristicos[2]+" |"}}
                 </p>
-                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-warning">Reserva tu
                         espacio!</button></a>
+                <br><br>
+                <div style="background-color: rgba(245, 245, 220, 0.361); text-align: justify; padding: 30px; margin: 30px;">
+                    <p> Noticias recientes de este país:</p>
+                    <p> {{"1) "+vectorPaises[7].noticiasRelevantes[0]}}</p>
+                    <p> {{"2) "+vectorPaises[7].noticiasRelevantes[1]}}</p>
+                    <p> {{"3) "+vectorPaises[7].noticiasRelevantes[2]}}</p>
+                </div>
             </div>
         </ng-template><ng-template ngbSlide>
             <div class="picsum-img-wrapper">
@@ -117,8 +173,15 @@
                     {{"| "+vectorPaises[8].lugaresTuristicos[1]+" |"}}
                     {{"| "+vectorPaises[8].lugaresTuristicos[2]+" |"}}
                 </p>
-                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-info">Reserva tu
+                <a routerLink="/FormularioUno" class="nav-link" href="#"><button class="btn btn-warning">Reserva tu
                         espacio!</button></a>
+                <br><br>
+                <div style="background-color: rgba(245, 245, 220, 0.361); text-align: justify; padding: 30px; margin: 30px;">
+                    <p> Noticias recientes de este país:</p>
+                    <p> {{"1) "+vectorPaises[8].noticiasRelevantes[0]}}</p>
+                    <p> {{"2) "+vectorPaises[8].noticiasRelevantes[1]}}</p>
+                    <p> {{"3) "+vectorPaises[8].noticiasRelevantes[2]}}</p>
+                </div>
             </div>
         </ng-template>
     </ngb-carousel>
